# ppo

./: .dockerignore  .gitignore  Dockerfile  create-sweep.sh  docker-compose.yml  env.yml  execute-sweep.sh  execute_sweep.py  generate_text.py  join-sweep.sh  linguistic-analysis.py  pyproject.toml  run.sh
dashboard/: .envrc  Dockerfile  deploy.sh  docker-compose.yml  start.sh
dashboard/notebooks/: abbeel.jl  august10.jl  august13.jl  august6.jl  babyai backup 1.jl  babyai.jl  babyai_dev.jl  compare_gpt_sizes_breakout.jl  compare_num_embeddings_and_random_params.jl  compare_num_embeddings_and_random_params2.jl  correlate.jl  dashboard.jl  gpt_vs_a2c_baseline_4_atari_games.jl  gpt_vs_a2c_baseline_results.jl  pretrained_vs_randomized3.jl  stabilize_gpt.jl
dashboard/pluto/: run_server.jl
linguistic-analysis/: main.py
param-sweep/: docker-compose.yml  run-sweep.sh  run.sh
rl/: agent.py  babyai_env.py  babyai_main.py  evaluation.py
src/: agent.py  antonyms.py  arguments.py  babyai_agent.py  babyai_env.py  babyai_gpt_agent.py  babyai_gpt_main.py  babyai_main.py  descs.py  distributions.py  enjoy.py  envs.py  evaluation.py  gpt_agent.py  gpt_main.py  instrs.py  main.py  mnist.py  model.py  my_redis.py  network.py  ppo.py  render_trajectories.py  rollouts.py  spec.py  supervised.py  utils.py
src/sweep_logger/: execute_sweep.py
supervised/: between.py  difference.py  regress.py  spec.py
