[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks", "Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp38-cp38-linux_x86_64.whl"}
pandas = {url = "https://files.pythonhosted.org/packages/76/3f/eff98f997ed710250fb59b25f5cb2d1853335d953644f0ad262f9555a59a/pandas-1.3.0-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.whl"}
stable-baselines3 = "^1.1.0"
h5py = "^3.3.0"
typed-argument-parser = "^1.7.0"
transformers = "^4.8.2"
pybullet = "^3.1.7"
sweep-logger = {git = "https://github.com/ethanabrooks/sweep-logger.git", rev = "5ce0aea5c9735afb6ebc1074a70f1f4d649c65e8"}
gym = {version = "^0.18.3", extras = ["atari"]}
setuptools = "^57.2.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
ipython = "^7.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
