[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks", "Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
stable-baselines3 = "^1.1.0"
h5py = "^3.3.0"
typed-argument-parser = "^1.7.0"
transformers = "^4.8.2"
pybullet = "^3.1.7"
sweep-logger = {git = "https://github.com/ethanabrooks/sweep-logger.git", rev = "main"}
gym = {version = "^0.18.3", extras = ["atari"]}
setuptools = "^57.2.0"
jsonlines = "^2.0.0"
pynndescent = "0.5.0"
umap-learn = "0.5.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
ipython = "^7.25.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
