[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks", "Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = [
    {markers = "sys_platform == 'linux'", url = "https://files.pythonhosted.org/packages/76/3f/eff98f997ed710250fb59b25f5cb2d1853335d953644f0ad262f9555a59a/pandas-1.3.0-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.whl"},
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/4c/dc/5949dd7e2b0233a26dc3482ee2ee8707542cc25696602d990ed407ff939e/pandas-1.3.2-cp38-cp38-macosx_10_9_x86_64.whl"}
]
stable-baselines3 = "^1.1.0"
h5py = "^3.3.0"
typed-argument-parser = "^1.7.0"
transformers = "^4.8.2"
pybullet = "^3.1.7"
sweep-logger = {git = "https://github.com/ethanabrooks/sweep-logger.git", rev = "main"}
gym = {version = "^0.18.3", extras = ["atari"]}
setuptools = "^57.2.0"
jsonlines = "^2.0.0"
pynndescent = "0.5.0"
umap-learn = "0.5.0"
babyai = {git = "https://github.com/GPT-RL/babyai.git"}

[tool.poetry.dev-dependencies]
black = "^21.6b0"
ipython = "^7.25.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
